Refactor: Refatorar todo sistema para utilizar o response e request